drop cap alignment fix, lighter code-bg, proportional bar chart for context window diagram

--- a/css/post-styles.css
+++ b/css/post-styles.css
@@ -105,9 +105,9 @@
   font-weight: normal;
   float: left;
   font-size: 4.2em;
-  line-height: 0.68;
+  line-height: 0.6;
   padding-right: 10px;
-  padding-top: 10px;
+  margin-top: 0.12em;
   color: var(--manuscript-blue);
 }
 
